# vibecheck-14521b1e

./: .gitignore  docker-compose.yml  index.html  tailwind.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: .env.example  Dockerfile  __init__.py  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt  verify-docker.sh
backend/alembic/: env.py
backend/alembic/versions/: 001_create_schema.py  002_add_unique_constraint_sentiment_timeseries.py  435b852d9d02_add_url_hash_to_articles.py  67a003713f58_add_scheduler_execution_log_table.py  6d279f8e2869_add_reddit_sentiment_to_sentiment_.py
backend/api/: __init__.py
backend/api/routes/: __init__.py  entities.py  health.py  sentiment.py
backend/api/schemas/: __init__.py  entity.py  sentiment.py
backend/db/: __init__.py  base.py  models.py  session.py
backend/pipeline/: __init__.py  scheduler.py
backend/pipeline/clients/: __init__.py  asknews_client.py
backend/pipeline/jobs/: __init__.py  news_job.py  stories_job.py
backend/pipeline/services/: __init__.py  deduplication_service.py  entity_service.py  sentiment_service.py  storage_service.py
backend/scripts/: docker-entrypoint.sh  seed_entities.py
backend/utils/: __init__.py  constants.py
src/: App.tsx  index.css
src/components/: Header.tsx  MiniSparkline.tsx  SearchDropdown.tsx  SentimentBar.tsx  (+4 more)
(+32 files in other folders)
